<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo_imc2"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="138dp"
        android:layout_height="35dp"
        android:layout_marginTop="132dp"
        android:text="@string/label_Chose"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.432"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/RgGenero"
        android:layout_width="179dp"
        android:layout_height="100dp"
        android:layout_marginTop="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.449"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <RadioButton
            android:id="@+id/RbFeminino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_salemale" />

        <RadioButton
            android:id="@+id/RbMasculino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/label_male" />
    </RadioGroup>

    <Button
        android:id="@+id/count"
        android:layout_width="150dp"
        android:layout_height="52dp"
        android:layout_marginTop="14dp"
        android:text="@string/Calculator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TxPeso" />

    <EditText
        android:id="@+id/TxAltura"
        android:layout_width="213dp"
        android:layout_height="45dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/label_hight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RgGenero"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/TxPeso"
        android:layout_width="209dp"
        android:layout_height="46dp"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/label_widith"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TxAltura"
        tools:ignore="TouchTargetSizeCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>